[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/hud/CarroisGothic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/hud/UITheme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/hud/menu/CreditsScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[node name="CreditsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBox" type="VBoxContainer" parent="CreditsContainer"]
margin_left = 287.0
margin_top = 79.0
margin_right = 737.0
margin_bottom = 520.0
custom_constants/separation = 12

[node name="MenuTitle" type="Label" parent="CreditsContainer/MenuBox"]
margin_right = 450.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
text = "Credits"

[node name="ContentContainer" type="PanelContainer" parent="CreditsContainer/MenuBox"]
margin_top = 63.0
margin_right = 450.0
margin_bottom = 383.0
rect_min_size = Vector2( 450, 320 )

[node name="CreditsText" type="RichTextLabel" parent="CreditsContainer/MenuBox/ContentContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 442.0
margin_bottom = 312.0
custom_fonts/italics_font = SubResource( 5 )
custom_fonts/bold_font = SubResource( 6 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true

[node name="ReturnBox" type="HBoxContainer" parent="CreditsContainer/MenuBox"]
margin_top = 395.0
margin_right = 450.0
margin_bottom = 441.0
custom_constants/separation = 20

[node name="BackButton" type="Button" parent="CreditsContainer/MenuBox/ReturnBox"]
margin_right = 450.0
margin_bottom = 46.0
size_flags_horizontal = 3
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CreditsContainer/MenuBox/ReturnBox/BackButton" to="." method="_close_to_return"]
